welcome.lessons.welcome.bat.bool2.InOrder.scala.error
inOrder:4: error: '=' expected but 'else' found.
  else {
  ^inOrder:9: error: illegal start of simple expression
  return cba
^